--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = intl po src config-examples
+SUBDIRS = intl po src config-examples doc
 
 EXTRA_DIST = config.rpath m4/ChangeLog  config.rpath m4/ChangeLog  \
 	autogen.sh CONFIGFORMAT
