search for the data file also in the app data dir and in ~/.mumpot/

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = \
 	@GTK_CFLAGS@ @LIBXML2_CFLAGS@ -I$(top_srcdir)/pixmaps -I$(top_srcdir)/intl
-DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
+DEFS = -DLOCALEDIR=\"$(localedir)\" -DDATADIR=\"$(datadir)/mumpot\" @DEFS@
 AM_YFLAGS = -d
 
 BUILT_SOURCES = mapconfig.h osm_tagpresets.h
