include tagpresets in make dist

--- a/config-examples/Makefile.am
+++ b/config-examples/Makefile.am
@@ -3,4 +3,4 @@ pkgdatadir = $(datadir)/mumpot
 bin_SCRIPTS = mumpot-tah mumpot-mapnik mumpot-cyclemap
 
 pkgdata_DATA = tagpresets
-
+EXTRA_DIST = tagpresets
