--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 INCLUDES = \
-	@GTK_CFLAGS@ @LIBXML2_CFLAGS@ -I$(top_srcdir)/pixmaps -I$(top_srcdir)/intl
+	@GTK_CFLAGS@ @LIBCURL_CFLAGS@ @LIBXML2_CFLAGS@ -I$(top_srcdir)/pixmaps -I$(top_srcdir)/intl
 DEFS = -DLOCALEDIR=\"$(localedir)\" -DMUMPOT_DATADIR=\"$(datadir)/mumpot\" @DEFS@
 AM_YFLAGS = -d
 
@@ -12,9 +12,15 @@ BUILT_SOURCES = mapconfig.h osm_tagpresets.h
 bin_PROGRAMS = mumpot get_maprect simplify-gps download_osm osm2places
 noinst_PROGRAMS = pngviewer cur_pos
 
+if OSM_UPLOAD
+  uplsrc = osm_upload.c osm_upload.h
+else
+  uplsrc = 
+endif
+
 pngviewer_SOURCES = pngviewer.c png_io.c png_io.h 
 mumpot_SOURCES = \
-	main.c mapdrawing.c gui_common.c gui_common.h mapconfig.h mapdrawing.h png2ps.c png2ps.h png_io.c png_io.h strasse.c strasse.h findpath.c findpath.h mapconfig.y mapconfig_lex.l mapconfig_data.h printdlg.c printdlg.h create_connection.c create_connection.h osm_view.c osm_view.h osm_parse.h osm_parse.c myintl.h geometry.h geometry.c gps.c gps.h osm_tagpresets.y osm_tagpresets.h osm_tagpresets_lex.l osm_tagpresets_data.h osm_tagpresets_gui.h osm_tagpresets_gui.c trip_stats.c trip_stats.h
+	main.c mapdrawing.c gui_common.c gui_common.h mapconfig.h mapdrawing.h png2ps.c png2ps.h png_io.c png_io.h strasse.c strasse.h findpath.c findpath.h mapconfig.y mapconfig_lex.l mapconfig_data.h printdlg.c printdlg.h create_connection.c create_connection.h osm_view.c osm_view.h osm_parse.h osm_parse.c myintl.h geometry.h geometry.c gps.c gps.h osm_tagpresets.y osm_tagpresets.h osm_tagpresets_lex.l osm_tagpresets_data.h osm_tagpresets_gui.h osm_tagpresets_gui.c trip_stats.c trip_stats.h $(uplsrc)
 get_maprect_SOURCES= \
 	get_maprect.c geometry.c geometry.h mapdrawing.c mapdrawing.h png_io.c png_io.h strasse.c mapconfig.h strasse.h mapconfig_lex.l mapconfig.y mapconfig_data.h png2ps.c png2ps.h gps.c gps.h
 simplify_gps_SOURCES= \
@@ -24,7 +30,7 @@ download_osm_SOURCES= \
 	download_osm.c gps.c gps.h
 pngviewer_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg
 #png2cfxga_LDADD = -lpng -lz -ljpeg
-mumpot_LDADD = @GTK_LIBS@  -lpng -lz -ljpeg @LIBXML2_LIBS@ @INTLLIBS@ @BTLIBS@ 
+mumpot_LDADD = @GTK_LIBS@  -lpng -lz -ljpeg @LIBXML2_LIBS@ @INTLLIBS@ @BTLIBS@ @LIBCURL_LIBS@
 osm2places_LDADD = @LIBXML2_LIBS@
 get_maprect_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg @LIBXML2_LIBS@
 simplify_gps_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@
