update list of files with strings to translate

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,4 +4,7 @@ src/printdlg.c
 src/osm_parse.c
 src/osm_view.c
 src/create_connection.c
+src/trip_stats.c
+src/osm_upload.c
+src/gui_common.c
 config-examples/tagpresets
