--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,7 @@ endif
 
 pngviewer_SOURCES = pngviewer.c png_io.c png_io.h 
 mumpot_SOURCES = \
-	main.c mapdrawing.c gui_common.c gui_common.h mapconfig.h mapdrawing.h png2ps.c png2ps.h png_io.c png_io.h strasse.c strasse.h findpath.c findpath.h mapconfig.y mapconfig_lex.l mapconfig_data.h printdlg.c printdlg.h create_connection.c create_connection.h osm_view.c osm_view.h osm_parse.h osm_parse.c myintl.h geometry.h geometry.c gps.c gps.h osm_tagpresets.y osm_tagpresets.h osm_tagpresets_lex.l osm_tagpresets_data.h osm_tagpresets_gui.h osm_tagpresets_gui.c trip_stats.c trip_stats.h $(uplsrc)
+	main.c mapdrawing.c gui_common.c gui_common.h mapconfig.h mapdrawing.h png2ps.c png2ps.h png_io.c png_io.h strasse.c strasse.h findpath.c findpath.h mapconfig.y mapconfig_lex.l mapconfig_data.h printdlg.c printdlg.h create_connection.c create_connection.h osm_view.c osm_view.h osm_parse.h osm_parse.c myintl.h geometry.h geometry.c gps.c gps.h osm_tagpresets.y osm_tagpresets.h osm_tagpresets_lex.l osm_tagpresets_data.h osm_tagpresets_gui.h osm_tagpresets_gui.c startposition.c startposition.h trip_stats.c trip_stats.h $(uplsrc)
 get_maprect_SOURCES= \
 	get_maprect.c geometry.c geometry.h mapdrawing.c mapdrawing.h png_io.c png_io.h strasse.c mapconfig.h strasse.h mapconfig_lex.l mapconfig.y mapconfig_data.h png2ps.c png2ps.h gps.c gps.h  gui_common.c gui_common.h
 simplify_gps_SOURCES= \
