--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,9 +30,9 @@ download_osm_SOURCES= \
 	download_osm.c gps.c gps.h common.h common.c
 pngviewer_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg
 #png2cfxga_LDADD = -lpng -lz -ljpeg
-mumpot_LDADD = @GTK_LIBS@  -lpng -lz -ljpeg @LIBXML2_LIBS@ @INTLLIBS@ @BTLIBS@ @LIBCURL_LIBS@
-osm2places_LDADD = @LIBXML2_LIBS@
-get_maprect_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg @LIBXML2_LIBS@
-simplify_gps_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@
-download_osm_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@
-cur_pos_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@
+mumpot_LDADD = @GTK_LIBS@  -lpng -lz -ljpeg @LIBXML2_LIBS@ @INTLLIBS@ @BTLIBS@ @LIBCURL_LIBS@ -lm
+osm2places_LDADD = @LIBXML2_LIBS@ -lm
+get_maprect_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg @LIBXML2_LIBS@ @LIBCURL_LIBS@ -lm
+simplify_gps_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@ -lm
+download_osm_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@ -lm
+cur_pos_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@ -lm
