--- a/configure.in
+++ b/configure.in
@@ -22,6 +22,7 @@ use_gtk1=no
 osm_upload=yes
 AC_ARG_ENABLE(osmupload,[--disable-osmupload  Disable code to do osm uploads],osm_upload=$enableval,osm_upload=yes)
 PKG_CHECK_MODULES(LIBXML2, libxml-2.0)
+PKG_CHECK_MODULES(PROJ, proj)
 
 if test $osm_upload = yes  ; then
   PKG_CHECK_MODULES(LIBCURL,libcurl, osm_upload=yes, osm_upload=no)
