get_maprect compile fix

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,7 +32,7 @@ pngviewer_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg
 #png2cfxga_LDADD = -lpng -lz -ljpeg
 mumpot_LDADD = @GTK_LIBS@  -lpng -lz -ljpeg @LIBXML2_LIBS@ @INTLLIBS@ @BTLIBS@ @LIBCURL_LIBS@ @PROJ_LIBS@ -lm
 osm2places_LDADD = @LIBXML2_LIBS@ -lm
-get_maprect_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg @LIBXML2_LIBS@ @LIBCURL_LIBS@ -lm
+get_maprect_LDADD = @GTK_LIBS@ -lpng -lz -ljpeg @LIBXML2_LIBS@ @LIBCURL_LIBS@ @PROJ_LIBS@ -lm
 simplify_gps_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@ -lm
 download_osm_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@ -lm
 cur_pos_LDADD = @GTK_LIBS@ -lz @LIBXML2_LIBS@ -lm
